# offroad

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  clippy.txt
benches/: bench_offset_multiple.rs  bench_offset_multiple1000.rs  bench_offset_multiple200.rs  bench_offset_multiple500.rs  offset_multiple.rs
docs/: ARCHITECTURE_v0.3.0.md  PHASE_2_3_COMPLETE_SUMMARY.md  PHASE_2_3_SUMMARY.md  QUICK_REFERENCE_PHASE_2_3.md  README_SPATIAL.md  RECONNECT_REFINEMENTS.md  RESEARCH_METHODOLOGY.md  SPATIAL_ACCELERATION.md  SPATIAL_ARCHITECTURE_DIAGRAM.md  SPATIAL_DISCUSSION_POINTS.md  SPATIAL_IMPLEMENTATION_RESEARCH.md  SPATIAL_QUICK_REFERENCE.md
examples/: README.md  analyze_memory.rs  debug_intersections.rs  debug_multi200.rs  explore_bounding.rs  graph_cycle_detection.rs  measure_overhead.rs  offset_arcline.rs  offset_arcline1000.rs  offset_arcline200.rs  offset_arcline500.rs  offset_multi.rs  offset_multi200.rs  offset_multiple.rs  offset_pline1.rs  offset_pline250.rs  offset_polyline.rs  offset_simple.rs  profile_offset.rs  search_perf.rs  test_merge_ends.rs  vector_perf.rs
src/: _offset_reconnect_arcs2.rs  _offset_reconnect_arcs3.rs  arc.rs  arc_string.rs  circle.rs  dist_arc_arc.rs  dist_line_circle.rs  dist_point_arc.rs  dist_point_circle.rs  dist_point_segment.rs  dist_segment_arc.rs  dist_segment_circle.rs  dist_segment_segment.rs  int_arc_arc.rs  int_circle_circle.rs  int_interval_interval.rs  int_line_arc.rs  int_line_circle.rs  int_line_line.rs  int_segment_arc.rs  int_segment_circle.rs  int_segment_point.rs  int_segment_segment.rs  interval.rs  (+19 more)
(+12 files in other folders)
