[package]
name = "offroad"
edition = "2021"
categories = ["algorithms", "data-structures", "graphics", "mathematics"]
keywords = ["offset", "offseting", "2d", "cad", "geometry", "cnc", "polygon"]
license = "MIT"
repository = "https://github.com/radevgit/offroad"
version = "0.0.1-alpha"
description = "2D offsetting for arc polylines."

[dependencies]
#rand = "0.8.5"
rand = "0.9.1"
robust = "1.1.0"
